--- a/Readme
+++ b/Readme
@@ -1,3 +1,4 @@
 Hi. 
 Welcome to my test task.
-To find 
+Check out "Answers" (https://github.com/DmitryTestZ/TestA/blob/main/Anwers) to find my anwers to the questions about “Aircraft information” and  “Flight Information” blocks testing
+Check out "Test1.js" (https://github.com/DmitryTestZ/TestA/blob/main/Test1.js) to find my autotest.
